--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.3.2",
     "element-ui": "^2.13.0",
     "pug": "^2.0.4",
     "pug-filters": "^3.1.1",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
+    "quill": "^1.3.7",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
